@@ -237,7 +237,7 @@ best solution is to fix your code!
 We may add \fIlink\fR and \fIlstat\fR commands in the future to allow
 virtual filesystems to support reading and writing links - this is
 supported by the C API, but has simply not been exposed to Tcl in this
-extension.
+extension, yet.
 .PP
 The Tcl 'Tcl_FSMatchInDirectory' function takes a variety of type
 information in a Tcl_GlobTypeData structure.  We currently only expose 
